Messages Lab + preview JSON body protocol
Introduce a Lab-based Messages flow and Preview body protocol. Add MessageLab and MessageInstructions; rework MessageScenario to POST sends to a local Lab HTTP listener, validate instruction JSON, manage associations, queue callbacks and enforce hold/release semantics. Start business HTTP earlier in WorkerSimulatorControlServer. Update frontend to accept/validate JSON instruction bodies and show guidance. Add and adapt tests (unit, integration, proof) and update docs/README to reflect delivered-as-acceptance, callbackQueued semantics, capacity bounds and new behavior.